--- a/LoveOpas/app/src/main/res/values/strings.xml
+++ b/LoveOpas/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoveOpas</string>
+    <string name="title_activity_horoscope">Horoscope</string>
 </resources>
